# enaBrowserTools

./: .gitignore  pyproject.toml
enabrowsertools/: assemblyGet.py  enaGroupGet.py  readGet.py  sequenceGet.py  utils.py
python3/: enaGroupGet.py
